# caldera

./: .gitignore  Makefile  README.md  make.bat  pyproject.toml
src/caldera/: __init__.py  errors.py  unit_converter.py
src/caldera/phase/: phase_detector_abc.py
src/caldera/state/: thermo_state.py
src/caldera/types/: __init__.py  phase.py  phase_flag.py  scalars.py  thermo_state.py  thermostate.py
tests/: test_phase_state_validation.py  test_sanity_check.py  test_simple_unit_converter.py
